<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ln_box"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@android:color/transparent"
    android:padding="12dp">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/transparent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/border_dialog"
            android:layout_margin="6dp">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="50dp"
                android:layout_marginLeft="14dp"
                android:layout_marginRight="14dp">

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal|center_vertical">

                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:gravity="center_vertical|center_horizontal">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/image_discount_3x"
                            android:layout_margin="10dp"/>

                        <com.ismartautocare.MyFontsStyle.MyTextViewFontsBold
                            android:text="@string/new_service_discount"
                            android:layout_height="wrap_content"
                            android:layout_width="wrap_content"
                            android:textColor="#d9c55d"
                            android:textSize="22dp"/>

                    </LinearLayout>

                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:layout_marginTop="10dp">

                        <com.ismartautocare.MyFontsStyle.MyTextViewFontsBold
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/new_service_discount"
                            android:textSize="18dp"
                            android:textColor="#d9c55d"
                            android:padding="15dp"
                            android:background="@android:color/transparent"
                            android:lines="1" />

                        <EditText
                            android:id="@+id/et_dis"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:hint="@string/new_service_discount_small"
                            android:textSize="18dp"
                            android:textColorHint="#c2c2c2"
                            android:padding="15dp"
                            android:background="@android:color/transparent"
                            android:lines="1"
                            android:layout_weight="1"
                            android:textColor="#fff"/>

                        <com.ismartautocare.MyFontsStyle.MyTextViewFonts
                            android:id="@+id/tv_unit"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/new_service_bath"
                            android:textSize="18dp"
                            android:textColor="#fff"
                            android:padding="15dp"
                            android:background="@android:color/transparent"
                            android:lines="1"
                            android:ems="5"/>

                        <com.ismartautocare.MyFontsStyle.MyButtonFonts
                            android:id="@+id/bt_percen"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/new_service_percent"
                            android:textSize="18dp"
                            android:background="@drawable/border_discount"
                            android:textStyle="bold"
                            android:textColor="@color/bg_main"
                            android:paddingLeft="20dp"
                            android:paddingRight="20dp"
                            android:layout_gravity="center_horizontal|center_vertical" />

                    </LinearLayout>

                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:layout_marginTop="10dp">

                        <com.ismartautocare.MyFontsStyle.MyTextViewFontsBold
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/new_service_description"
                            android:textSize="18dp"
                            android:textColor="#d9c55d"
                            android:padding="15dp"
                            android:background="@android:color/transparent"
                            android:lines="1" />

                        <com.ismartautocare.MyFontsStyle.MyEdittextFonts
                            android:id="@+id/et_description"
                            android:layout_height="wrap_content"
                            android:layout_width="wrap_content"
                            android:hint="@string/new_service_description_small"
                            android:textSize="18dp"
                            android:textColorHint="#bebdbd"
                            android:backgroundTint="#fff"
                            android:lines="1"
                            android:textColor="#fff"
                            android:ems="100"/>

                    </LinearLayout>

                    <com.ismartautocare.MyFontsStyle.MyButtonFonts
                        android:id="@+id/bt_confirm"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/new_service_confirm"
                        android:textSize="18dp"
                        android:background="@drawable/border_button_login"
                        android:textStyle="bold"
                        android:textColor="@color/bg_main"
                        android:paddingLeft="30dp"
                        android:paddingRight="30dp"
                        android:layout_gravity="center_horizontal|center_vertical"
                        android:layout_marginTop="20dp"/>

                </LinearLayout>

            </FrameLayout>

        </LinearLayout>

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/rl_close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_margin="20dp">

    <!--<ImageView-->
        <!--android:layout_width="60dp"-->
        <!--android:layout_height="60dp"-->
        <!--android:src="@drawable/number_3x"-->
        <!--android:layout_gravity="right"/>-->

        <ImageView
            android:id="@+id/image_dis_close"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/remove_3x"
            android:layout_gravity="center_vertical|right" />

    </RelativeLayout>

</FrameLayout>