<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/bg_main"
    android:id="@+id/show_fragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/bg_box">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/bottomBar"
            android:orientation="horizontal"
            android:layout_margin="20dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@+id/bottomBar"
                android:orientation="horizontal"
                android:layout_weight="1"
                android:gravity="center_vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/asset_13_1_create"
                    android:padding="6dp"
                    android:layout_weight="1"/>

                <com.ismartautocare.MyFontsStyle.MyTextViewFonts
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/member_see_all"
                    android:textSize="18dp"
                    android:textColor="#fff"
                    android:padding="15dp"
                    android:background="@android:color/transparent"
                    android:layout_weight="1"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@+id/bottomBar"
                android:orientation="horizontal"
                android:layout_weight="1">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_above="@+id/bottomBar"
                    android:orientation="vertical"
                    android:layout_weight="1"
                    android:layout_gravity="center_vertical|center_horizontal">

                    <com.ismartautocare.MyFontsStyle.MyEdittextFonts
                        android:id="@+id/et_keywords"
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:hint="@string/member_keyword"
                        android:textSize="18dp"
                        android:textColorHint="#d9c55d"
                        android:backgroundTint="#fff"
                        android:lines="1"
                        android:textColor="#fff"
                        android:ems="10"/>

                </LinearLayout>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/asset_20"
                    android:padding="6dp"
                    android:layout_weight="1"/>

            </LinearLayout>

        </LinearLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ListView
                android:id="@+id/lv"
                android:layout_height="match_parent"
                android:layout_width="match_parent"
                android:background="@color/bg_main"
                android:divider="#fff"
                android:dividerHeight="1px">
            </ListView>

            <com.ismartautocare.MyFontsStyle.MyTextViewFonts
                android:id="@+id/tv_not_data"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/on_service_not_found"
                android:textSize="18dp"
                android:textColor="#fff"
                android:background="@android:color/transparent"
                android:layout_weight="1"
                android:layout_gravity="center_vertical|center_horizontal"/>

        </FrameLayout>

    </LinearLayout>

</FrameLayout>